WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275513
CTS api,validation,encoding,cmds,render,* test is failing
https://bugs.webkit.org/show_bug.cgi?id=275513
Summary
CTS api,validation,encoding,cmds,render,* test is failing
Mike Wyrzykowski
Reported
2024-06-14 14:31:55 PDT
Revert
279708@main
because Regressed validation,encoding,cmds,render test.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-06-14 14:32:12 PDT
<
rdar://problem/129874785
>
Mike Wyrzykowski
Comment 2
2024-06-14 14:33:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29842
Mike Wyrzykowski
Comment 3
2024-06-15 18:25:38 PDT
This appears to be a test only regression, will fix and enable the test as reverting the change doesn't fix the test on main
Mike Wyrzykowski
Comment 4
2024-06-16 22:52:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29887
EWS
Comment 5
2024-06-18 11:39:40 PDT
Committed
280129@main
(e999bcebefdc): <
https://commits.webkit.org/280129@main
> Reviewed commits have been landed. Closing PR #29887 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug