CTS api,validation,encoding,cmds,render,* test is failing https://bugs.webkit.org/show_bug.cgi?id=275513 <radar://129874785>

Reviewed by Tadeu Zagallo.

279708@main introduced incorrect validation for invalid draw calls,
instead of reverting it which would reintroduce the buffer overflow,
correct the logic so invalid draws produce the expected validation error.

Also enable the impacted test to avoid regressing the CTS test moving
forwards.

* LayoutTests/fast/webgpu/regression/repro_275024-expected.txt:
* LayoutTests/fast/webgpu/regression/repro_275024b-expected.txt:
Update expectations, this case should not be a validation error per
the specification.

* LayoutTests/platform/mac-wk2/TestExpectations:
Add test to passing list.

* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::executePreDrawCommands):
(WebGPU::RenderBundleEncoder::computeMininumVertexInstanceCount const):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::executePreDrawCommands):
(WebGPU::RenderPassEncoder::computeMininumVertexInstanceCount const):
Correct logic.

Canonical link: https://commits.webkit.org/280129@main