Source/WebGPU/WebGPU/RenderPassEncoder.mm
@@ -329,7 +329,8 @@ bool RenderPassEncoder::runIndexBufferValidation(uint32_t firstInstance, uint32_
     auto& requiredBufferIndices = m_pipeline->requiredBufferIndices();
     for (auto& [bufferIndex, bufferData] : requiredBufferIndices) {
         auto it = m_vertexBuffers.find(bufferIndex);
-        RELEASE_ASSERT(it != m_vertexBuffers.end());
+        if (it == m_vertexBuffers.end())
+            continue;
         auto bufferSize = it->value.size;
         auto stride = bufferData.stride;
         auto lastStride = bufferData.lastStride;
@@ -479,20 +480,6 @@ bool RenderPassEncoder::executePreDrawCommands(const Buffer* indirectBuffer)
         return false;
     }
 
-    auto& requiredBufferIndices = m_pipeline->requiredBufferIndices();
-    for (auto& [bufferIndex, bufferData] : requiredBufferIndices) {
-        auto it = m_vertexBuffers.find(bufferIndex);
-        RELEASE_ASSERT(it != m_vertexBuffers.end());
-        auto bufferSize = it->value.size;
-        auto lastStride = bufferData.lastStride;
-        if (bufferData.stepMode == WGPUVertexStepMode_Vertex) {
-            if (bufferSize < lastStride) {
-                makeInvalid([NSString stringWithFormat:@"Buffer[%d] fails: bufferSize(%llu) < lastStride(%llu)", bufferIndex, bufferSize, lastStride]);
-                return false;
-            }
-        }
-    }
-
     for (auto& [groupIndex, weakBindGroup] : m_bindGroups) {
         if (!weakBindGroup.get()) {
             makeInvalid(@"Bind group is missing");
@@ -589,9 +576,10 @@ std::pair<uint32_t, uint32_t> RenderPassEncoder::computeMininumVertexInstanceCou
         auto bufferSize = it->value.buffer.length;
         auto stride = bufferData.stride;
         auto lastStride = bufferData.lastStride;
-        if (!stride || bufferSize < lastStride)
+        if (!stride)
             continue;
-        auto elementCount = (bufferSize - lastStride) / stride + 1;
+
+        auto elementCount = bufferSize < lastStride ? 0 : ((bufferSize - lastStride) / stride + 1);
         if (bufferData.stepMode == WGPUVertexStepMode_Vertex)
             minVertexCount = std::min<uint32_t>(minVertexCount, elementCount);
         else
